...
        android:textColor="#FFF"
        android:textSize="18dp"
        android:textStyle="bold"
        app:cornerRadius="40dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#BD7701"
        android:text="Register"
        android:textColor="#FFF"
        android:textSize="18dp"
        android:textStyle="bold"
        app:cornerRadius="40dp" />

    <ImageView
...
